<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/txtChooseFood" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/txtWith" />

    <ToggleButton
        android:id="@+id/toggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:textOff="@string/toggleBtnNo"
        android:textOn="@string/toggleBtnYes" />

    <CheckBox
        android:id="@+id/cbVopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/cbtxtVopper" />

    <CheckBox
        android:id="@+id/cbFri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/cbtxtFri" />

    <CheckBox
        android:id="@+id/cbPepsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/cbtxtPepsi" />

    <CheckBox
        android:id="@+id/cbSause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/cbtxtSause" />

    <CheckBox
        android:id="@+id/cbDessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/cbtxtDessert" />

    <ImageButton
        android:id="@+id/imgButtonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="3"
        android:layout_gravity="bottom"
        android:background="@null"
        android:contentDescription="@string/next_layout"
        android:src="@drawable/ic_next_layout" />

    <ImageButton
        android:id="@+id/imgButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="bottom"
        android:background="@null"
        android:contentDescription="@string/back_layout"
        android:src="@drawable/ic_back_layout" />
</GridLayout>