<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity"

    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="554dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ui" />

        <Button
            android:id="@+id/btnMoreInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/know_more" />

        <TextView
            android:id="@+id/txtNameUi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/UI_name"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtUiMore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/UI_more"
            android:textSize="20sp"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@null"
            android:contentDescription="@string/back_layout"
            android:src="@drawable/ic_back_layout" />

    </LinearLayout>

</LinearLayout>